--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
                 </li>
                 <li class="yk-project-showcase__item">
                   <h3 class="yk-project-showcase__item__title">
-                    <a href="https://portfolio-bank-dash.vercel.app/en/transactions" target="_blank">Data Dashboard
+                    <a href="https://portfolio-bank-dash.vercel.app/en/dashboard" target="_blank">Data Dashboard
                     </a>
                   </h3>
                   <span class="yk-project-showcase__item__category">Next.js. Charts. Data visualization.</span>
@@ -736,22 +736,22 @@
               </ul>
               <div class="yk-project-showcase__images">
                 <div class="yk-project-showcase__image">
-                  <img src="assets/img/portfolio-01.jpg" alt="image">
+                  <img src="assets/img/portfolio-01.jpg" alt="image" loading="lazy">
                 </div>
                 <div class="yk-project-showcase__image">
-                  <img src="assets/img/portfolio-02.jpg" alt="image">
+                  <img src="assets/img/portfolio-02.jpg" alt="image" loading="lazy">
                 </div>
                 <div class="yk-project-showcase__image">
-                  <img src="assets/img/portfolio-03.jpg" alt="image">
+                  <img src="assets/img/portfolio-03.jpg" alt="image" loading="lazy">
                 </div>
                 <div class="yk-project-showcase__image">
-                  <img src="assets/img/portfolio-04.jpg" alt="image">
+                  <img src="assets/img/portfolio-04.jpg" alt="image" loading="lazy">
                 </div>
                 <div class="yk-project-showcase__image">
-                  <img src="assets/img/portfolio-05.jpg" alt="image">
+                  <img src="assets/img/portfolio-05.jpg" alt="image" loading="lazy">
                 </div>
                 <div class="yk-project-showcase__image">
-                  <img src="assets/img/portfolio-06.jpg" alt="image">
+                  <img src="assets/img/portfolio-06.jpg" alt="image" loading="lazy">
                 </div>
               </div>
             </div>
@@ -1004,17 +1004,19 @@
                           ">
                         <article class="yk-post">
                           <div class="yk-post-thumbnail">
-                            <img src="assets/img/attachment-08.jpg" alt="image"><a class="yk-post-thumbnail__link" href="index.html#"></a>
+                            <img src="assets/img/attachment-08.jpg" alt="image" loading="lazy">
+                            <!-- <a class="yk-post-thumbnail__link" href="index.html#"></a> -->
                           </div>
                           <div class="yk-post-content">
                             <header class="yk-post-header">
                               <h3 class="yk-post-title">
-                                <a href="index.html#">Lights winged seasons fish abundantly
-                                  evening.</a>
+                                <!-- <a href="javascript:void(0)">CSS View Transition. Animated transitions between different website views.</a> -->
+                                <span>CSS View Transition. Animated transitions between different website views.</span>
                               </h3>
                             </header>
                             <footer class="yk-post-footer">
-                              <a class="yk-post__link yk-link-with-arrow" href="index.html#"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></a>
+                              <!-- <a class="yk-post__link yk-link-with-arrow" href="javascript:void(0)"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></a> -->
+                              <span class="yk-post__link yk-link-with-arrow"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></span>
                             </footer>
                           </div>
                         </article>
@@ -1028,17 +1030,19 @@
                           ">
                         <article class="yk-post">
                           <div class="yk-post-thumbnail">
-                            <img src="assets/img/attachment-09.jpg" alt="image"><a class="yk-post-thumbnail__link" href="index.html#"></a>
+                            <img src="assets/img/attachment-09.jpg" alt="image" loading="lazy">
+                            <!-- <a class="yk-post-thumbnail__link" href="index.html#"></a> -->
                           </div>
                           <div class="yk-post-content">
                             <header class="yk-post-header">
                               <h3 class="yk-post-title">
-                                <a href="index.html#">Given void great you’re good appear also
-                                  fifth.</a>
+                                <!-- <a href="javascript:void(0)">GSAP.js animation library. A powerful tool for creating interactive animations.</a> -->
+                                <span>GSAP.js animation library. A powerful tool for creating interactive animations.</span>
                               </h3>
                             </header>
                             <footer class="yk-post-footer">
-                              <a class="yk-post__link yk-link-with-arrow" href="index.html#"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></a>
+                              <!-- <a class="yk-post__link yk-link-with-arrow" href="javascript:void(0)"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></a> -->
+                              <span class="yk-post__link yk-link-with-arrow"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></span>
                             </footer>
                           </div>
                         </article>
@@ -1052,17 +1056,19 @@
                           ">
                         <article class="yk-post">
                           <div class="yk-post-thumbnail">
-                            <img src="assets/img/attachment-10.jpg" alt="image"><a class="yk-post-thumbnail__link" href="index.html#"></a>
+                            <img src="assets/img/attachment-10.jpg" alt="image" loading="lazy">
+                            <!-- <a class="yk-post-thumbnail__link" href="index.html#"></a> -->
                           </div>
                           <div class="yk-post-content">
                             <header class="yk-post-header">
                               <h3 class="yk-post-title">
-                                <a href="index.html#">Winged moved stars, fruit creature seed
-                                  night.</a>
+                                <!-- <a href="javascript:void(0)">The Atomic Design concept for React/Next.js UI components + Storybook.</a> -->
+                                <span>The Atomic Design concept for React/Next.js UI components + Storybook.</span>
                               </h3>
                             </header>
                             <footer class="yk-post-footer">
-                              <a class="yk-post__link yk-link-with-arrow" href="index.html#"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></a>
+                              <!-- <a class="yk-post__link yk-link-with-arrow" href="javascript:void(0)"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></a> -->
+                              <span class="yk-post__link yk-link-with-arrow"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></span>
                             </footer>
                           </div>
                         </article>
