--- a/index.html
+++ b/index.html
@@ -711,25 +711,29 @@
                 </li>
                 <li class="yk-project-showcase__item">
                   <h3 class="yk-project-showcase__item__title">
-                    <a href="javascript:void(0)" target="_blank">Landing Page</a>
+                    <!-- <a href="javascript:void(0)" target="_blank">Landing Page</a> -->
+                    <span>Landing Page</span>
                   </h3>
                   <span class="yk-project-showcase__item__category">Design. Responsive. Animation.</span>
                 </li>
                 <li class="yk-project-showcase__item">
                   <h3 class="yk-project-showcase__item__title">
-                    <a href="javascript:void(0)" target="_blank">E-commerce Platform</a>
+                    <!-- <a href="javascript:void(0)" target="_blank">E-commerce Platform</a> -->
+                    <span>E-commerce Platform</span>
                   </h3>
                   <span class="yk-project-showcase__item__category">Next.js. Payments. Product catalog.</span>
                 </li>
                 <li class="yk-project-showcase__item">
                   <h3 class="yk-project-showcase__item__title">
-                    <a href="javascript:void(0)" target="_blank">Web Application</a>
+                    <!-- <a href="javascript:void(0)" target="_blank">Web Application</a> -->
+                    <span>Web Application</span>
                   </h3>
                   <span class="yk-project-showcase__item__category">Authentication. CRUD. API integration.</span>
                 </li>
                 <li class="yk-project-showcase__item">
                   <h3 class="yk-project-showcase__item__title">
-                    <a href="javascript:void(0)" target="_blank">Portfolio Website</a>
+                    <!-- <a href="javascript:void(0)" target="_blank">Portfolio Website</a> -->
+                    <span>Portfolio Website</span>
                   </h3>
                   <span class="yk-project-showcase__item__category">Minimalistic. SEO. Performance optimized.</span>
                 </li>
