--- a/index.html
+++ b/index.html
@@ -573,15 +573,15 @@
                     <div class="swiper-slide">
                       <div class="yk-work">
                         <div class="yk-work-thumbnail">
-                          <img src="assets/img/portfolio-01.jpg" alt="image"><a class="yk-work-thumbnail__link" href="index.html#"></a>
+                          <img src="assets/img/portfolio-01.jpg" alt="image"><a class="yk-work-thumbnail__link" href="https://yaroslavkaliuk.github.io/potrfolio-digital/" target="_blank"></a>
                         </div>
                         <div class="yk-work-content">
                           <header class="yk-work-header">
                             <div class="yk-work-meta">
-                              <span>Branding</span><span>01 June 2020</span>
+                              <span>Creative. Animation. Responsive.</span>
                             </div>
                             <h3 class="yk-work-title">
-                              <a href="index.html#">Typography</a>
+                              <a href="https://yaroslavkaliuk.github.io/potrfolio-digital/" target="_blank">Corporate Website</a>
                             </h3>
                           </header>
                           <footer class="yk-work-footer">
@@ -593,19 +593,39 @@
                     <div class="swiper-slide">
                       <div class="yk-work">
                         <div class="yk-work-thumbnail">
-                          <img src="assets/img/portfolio-02.jpg" alt="image"><a class="yk-work-thumbnail__link" href="index.html#"></a>
+                          <img src="assets/img/portfolio-02.jpg" alt="image"><a class="yk-work-thumbnail__link" href="https://portfolio-bank-dash.vercel.app/en/dashboard" target="_blank"></a>
                         </div>
                         <div class="yk-work-content">
                           <header class="yk-work-header">
                             <div class="yk-work-meta">
-                              <span>Design</span><span>01 June 2020</span>
+                              <span>Next.js. Charts. Data visualization.</span>
                             </div>
                             <h3 class="yk-work-title">
-                              <a href="index.html#">Journal Mockup</a>
+                              <a href="https://portfolio-bank-dash.vercel.app/en/dashboard" target="_blank">Data Dashboard</a>
                             </h3>
                           </header>
                           <footer class="yk-work-footer">
-                            <a class="yk-work__link yk-link-with-arrow" href="index.html#"><span class="yk-link-with-arrow__text">View case</span><span class="yk-link-with-arrow__icon">🡒</span></a>
+                            <a class="yk-work__link yk-link-with-arrow" href="https://portfolio-bank-dash.vercel.app/en/dashboard" target="_blank"><span class="yk-link-with-arrow__text">View case</span><span class="yk-link-with-arrow__icon">🡒</span></a>
+                          </footer>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- <div class="swiper-slide">
+                      <div class="yk-work">
+                        <div class="yk-work-thumbnail">
+                          <img src="assets/img/portfolio-03.jpg" alt="image"><a class="yk-work-thumbnail__link" href="javascript:void(0)" target="_blank"></a>
+                        </div>
+                        <div class="yk-work-content">
+                          <header class="yk-work-header">
+                            <div class="yk-work-meta">
+                              <span>Design. Responsive. Animation.</span>
+                            </div>
+                            <h3 class="yk-work-title">
+                              <a href="javascript:void(0)" target="_blank">Landing Page</a>
+                            </h3>
+                          </header>
+                          <footer class="yk-work-footer">
+                            <a class="yk-work__link yk-link-with-arrow" href="javascript:void(0)" target="_blank"><span class="yk-link-with-arrow__text">View case</span><span class="yk-link-with-arrow__icon">🡒</span></a>
                           </footer>
                         </div>
                       </div>
@@ -613,19 +633,19 @@
                     <div class="swiper-slide">
                       <div class="yk-work">
                         <div class="yk-work-thumbnail">
-                          <img src="assets/img/portfolio-03.jpg" alt="image"><a class="yk-work-thumbnail__link" href="index.html#"></a>
+                          <img src="assets/img/portfolio-04.jpg" alt="image"><a class="yk-work-thumbnail__link" href="javascript:void(0)" target="_blank"></a>
                         </div>
                         <div class="yk-work-content">
                           <header class="yk-work-header">
                             <div class="yk-work-meta">
-                              <span>Inspiration</span><span>01 June 2020</span>
+                              <span>Next.js. Payments. Product catalog.</span>
                             </div>
                             <h3 class="yk-work-title">
-                              <a href="index.html#">Glued Paper</a>
+                              <a href="javascript:void(0)" target="_blank">E-commerce Platform</a>
                             </h3>
                           </header>
                           <footer class="yk-work-footer">
-                            <a class="yk-work__link yk-link-with-arrow" href="index.html#"><span class="yk-link-with-arrow__text">View case</span><span class="yk-link-with-arrow__icon">🡒</span></a>
+                            <a class="yk-work__link yk-link-with-arrow" href="javascript:void(0)" target="_blank"><span class="yk-link-with-arrow__text">View case</span><span class="yk-link-with-arrow__icon">🡒</span></a>
                           </footer>
                         </div>
                       </div>
@@ -633,19 +653,19 @@
                     <div class="swiper-slide">
                       <div class="yk-work">
                         <div class="yk-work-thumbnail">
-                          <img src="assets/img/portfolio-04.jpg" alt="image"><a class="yk-work-thumbnail__link" href="index.html#"></a>
+                          <img src="assets/img/portfolio-05.jpg" alt="image"><a class="yk-work-thumbnail__link" href="javascript:void(0)" target="_blank"></a>
                         </div>
                         <div class="yk-work-content">
                           <header class="yk-work-header">
                             <div class="yk-work-meta">
-                              <span>Branding</span><span>01 June 2020</span>
+                              <span>Authentication. CRUD. API integration.</span>
                             </div>
                             <h3 class="yk-work-title">
-                              <a href="index.html#">Fashion Men</a>
+                              <a href="javascript:void(0)" target="_blank">Web Application</a>
                             </h3>
                           </header>
                           <footer class="yk-work-footer">
-                            <a class="yk-work__link yk-link-with-arrow" href="index.html#"><span class="yk-link-with-arrow__text">View case</span><span class="yk-link-with-arrow__icon">🡒</span></a>
+                            <a class="yk-work__link yk-link-with-arrow" href="javascript:void(0)" target="_blank"><span class="yk-link-with-arrow__text">View case</span><span class="yk-link-with-arrow__icon">🡒</span></a>
                           </footer>
                         </div>
                       </div>
@@ -653,43 +673,23 @@
                     <div class="swiper-slide">
                       <div class="yk-work">
                         <div class="yk-work-thumbnail">
-                          <img src="assets/img/portfolio-05.jpg" alt="image"><a class="yk-work-thumbnail__link" href="index.html#"></a>
+                          <img src="assets/img/portfolio-06.jpg" alt="image"><a class="yk-work-thumbnail__link" href="javascript:void(0)" target="_blank"></a>
                         </div>
                         <div class="yk-work-content">
                           <header class="yk-work-header">
                             <div class="yk-work-meta">
-                              <span>Design</span><span>01 June 2020</span>
+                              <span>Minimalistic. SEO. Performance optimized.</span>
                             </div>
                             <h3 class="yk-work-title">
-                              <a href="index.html#">Graphic Design</a>
+                              <a href="javascript:void(0)" target="_blank">Portfolio Website</a>
                             </h3>
                           </header>
                           <footer class="yk-work-footer">
-                            <a class="yk-work__link yk-link-with-arrow" href="index.html#"><span class="yk-link-with-arrow__text">View case</span><span class="yk-link-with-arrow__icon">🡒</span></a>
+                            <a class="yk-work__link yk-link-with-arrow" href="javascript:void(0)" target="_blank"><span class="yk-link-with-arrow__text">View case</span><span class="yk-link-with-arrow__icon">🡒</span></a>
                           </footer>
                         </div>
                       </div>
-                    </div>
-                    <div class="swiper-slide">
-                      <div class="yk-work">
-                        <div class="yk-work-thumbnail">
-                          <img src="assets/img/portfolio-06.jpg" alt="image"><a class="yk-work-thumbnail__link" href="index.html#"></a>
-                        </div>
-                        <div class="yk-work-content">
-                          <header class="yk-work-header">
-                            <div class="yk-work-meta">
-                              <span>Inspiration</span><span>01 June 2020</span>
-                            </div>
-                            <h3 class="yk-work-title">
-                              <a href="index.html#">Modern Glasses</a>
-                            </h3>
-                          </header>
-                          <footer class="yk-work-footer">
-                            <a class="yk-work__link yk-link-with-arrow" href="index.html#"><span class="yk-link-with-arrow__text">View case</span><span class="yk-link-with-arrow__icon">🡒</span></a>
-                          </footer>
-                        </div>
-                      </div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
@@ -709,34 +709,30 @@
                   </h3>
                   <span class="yk-project-showcase__item__category">Next.js. Charts. Data visualization.</span>
                 </li>
-                <li class="yk-project-showcase__item">
+                <!-- <li class="yk-project-showcase__item">
                   <h3 class="yk-project-showcase__item__title">
-                    <!-- <a href="javascript:void(0)" target="_blank">Landing Page</a> -->
-                    <span>Landing Page</span>
+                    <a href="javascript:void(0)" target="_blank">Landing Page</a>
                   </h3>
                   <span class="yk-project-showcase__item__category">Design. Responsive. Animation.</span>
                 </li>
                 <li class="yk-project-showcase__item">
                   <h3 class="yk-project-showcase__item__title">
-                    <!-- <a href="javascript:void(0)" target="_blank">E-commerce Platform</a> -->
-                    <span>E-commerce Platform</span>
+                    <a href="javascript:void(0)" target="_blank">E-commerce Platform</a>
                   </h3>
                   <span class="yk-project-showcase__item__category">Next.js. Payments. Product catalog.</span>
                 </li>
                 <li class="yk-project-showcase__item">
                   <h3 class="yk-project-showcase__item__title">
-                    <!-- <a href="javascript:void(0)" target="_blank">Web Application</a> -->
-                    <span>Web Application</span>
+                    <a href="javascript:void(0)" target="_blank">Web Application</a>
                   </h3>
                   <span class="yk-project-showcase__item__category">Authentication. CRUD. API integration.</span>
                 </li>
                 <li class="yk-project-showcase__item">
                   <h3 class="yk-project-showcase__item__title">
-                    <!-- <a href="javascript:void(0)" target="_blank">Portfolio Website</a> -->
-                    <span>Portfolio Website</span>
+                    <a href="javascript:void(0)" target="_blank">Portfolio Website</a>
                   </h3>
                   <span class="yk-project-showcase__item__category">Minimalistic. SEO. Performance optimized.</span>
-                </li>
+                </li> -->
               </ul>
               <div class="yk-project-showcase__images">
                 <div class="yk-project-showcase__image">
