--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
                   </div>
                   <div class="yk-gap-100--md"></div>
                 </div>
-                <div class="col-lg-4 offset-lg-1">
+                <div class="col-lg-4 offset-lg-1 attachment-06">
                   <div class="yk-animated-block" style="animation-delay: 400ms; animation-duration: 700ms">
                     <div class="yk-slide-photo">
                       <div class="yk-slide-photo__inside">
