--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <li data-menuanchor="Testimonials">
           <a href="index.html#Testimonials">Testimonials</a>
         </li>
-        <li data-menuanchor="Blog"><a href="index.html#Blog">Blog</a></li>
+        <!-- <li data-menuanchor="Blog"><a href="index.html#Blog">Blog</a></li> -->
         <li data-menuanchor="Contact">
           <a href="index.html#Contact">Contact</a>
         </li>
@@ -972,7 +972,7 @@
           </div>
         </div>
       </div>
-      <div class="yk-section pp-scrollable" data-anchor="Blog" data-brightness="light">
+      <!-- <div class="yk-section pp-scrollable" data-anchor="Blog" data-brightness="light">
         <div class="yk-section__vertical-align">
           <div class="yk-section__content">
             <div class="yk-section__particles">
@@ -1005,18 +1005,16 @@
                         <article class="yk-post">
                           <div class="yk-post-thumbnail">
                             <img src="assets/img/attachment-08.jpg" alt="image" loading="lazy">
-                            <!-- <a class="yk-post-thumbnail__link" href="index.html#"></a> -->
+                            <a class="yk-post-thumbnail__link" href="javascript:void(0)" target="_blank"></a>
                           </div>
                           <div class="yk-post-content">
                             <header class="yk-post-header">
                               <h3 class="yk-post-title">
-                                <!-- <a href="javascript:void(0)">CSS View Transition. Animated transitions between different website views.</a> -->
-                                <span>CSS View Transition. Animated transitions between different website views.</span>
+                                <a href="javascript:void(0)" target="_blank">CSS View Transition. Animated transitions between different website views.</a>
                               </h3>
                             </header>
                             <footer class="yk-post-footer">
-                              <!-- <a class="yk-post__link yk-link-with-arrow" href="javascript:void(0)"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></a> -->
-                              <span class="yk-post__link yk-link-with-arrow"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></span>
+                              <a class="yk-post__link yk-link-with-arrow" href="javascript:void(0)" target="_blank"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></a>
                             </footer>
                           </div>
                         </article>
@@ -1031,18 +1029,16 @@
                         <article class="yk-post">
                           <div class="yk-post-thumbnail">
                             <img src="assets/img/attachment-09.jpg" alt="image" loading="lazy">
-                            <!-- <a class="yk-post-thumbnail__link" href="index.html#"></a> -->
+                            <a class="yk-post-thumbnail__link" href="javascript:void(0)" target="_blank"></a>
                           </div>
                           <div class="yk-post-content">
                             <header class="yk-post-header">
                               <h3 class="yk-post-title">
-                                <!-- <a href="javascript:void(0)">GSAP.js animation library. A powerful tool for creating interactive animations.</a> -->
-                                <span>GSAP.js animation library. A powerful tool for creating interactive animations.</span>
+                                <a href="javascript:void(0)" target="_blank">GSAP.js animation library. A powerful tool for creating interactive animations.</a>
                               </h3>
                             </header>
                             <footer class="yk-post-footer">
-                              <!-- <a class="yk-post__link yk-link-with-arrow" href="javascript:void(0)"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></a> -->
-                              <span class="yk-post__link yk-link-with-arrow"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></span>
+                              <a class="yk-post__link yk-link-with-arrow" href="javascript:void(0)" target="_blank"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></a>
                             </footer>
                           </div>
                         </article>
@@ -1057,18 +1053,16 @@
                         <article class="yk-post">
                           <div class="yk-post-thumbnail">
                             <img src="assets/img/attachment-10.jpg" alt="image" loading="lazy">
-                            <!-- <a class="yk-post-thumbnail__link" href="index.html#"></a> -->
+                            <a class="yk-post-thumbnail__link" href="javascript:void(0)" target="_blank"></a>
                           </div>
                           <div class="yk-post-content">
                             <header class="yk-post-header">
                               <h3 class="yk-post-title">
-                                <!-- <a href="javascript:void(0)">The Atomic Design concept for React/Next.js UI components + Storybook.</a> -->
-                                <span>The Atomic Design concept for React/Next.js UI components + Storybook.</span>
+                                <a href="javascript:void(0)" target="_blank">The Atomic Design concept for React/Next.js UI components + Storybook.</a>
                               </h3>
                             </header>
                             <footer class="yk-post-footer">
-                              <!-- <a class="yk-post__link yk-link-with-arrow" href="javascript:void(0)"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></a> -->
-                              <span class="yk-post__link yk-link-with-arrow"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></span>
+                              <a class="yk-post__link yk-link-with-arrow" href="javascript:void(0)" target="_blank"><span class="yk-link-with-arrow__text">Read more</span><span class="yk-link-with-arrow__icon">🡒</span></a>
                             </footer>
                           </div>
                         </article>
@@ -1080,7 +1074,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="yk-section pp-scrollable" data-anchor="Contact" data-brightness="dark">
         <div class="yk-section__vertical-align">
           <div class="yk-section__content">
@@ -1171,7 +1165,7 @@
         <li data-menuanchor="Portfolio"></li>
         <li data-menuanchor="Awards"></li>
         <li data-menuanchor="Testimonials"></li>
-        <li data-menuanchor="Blog"></li>
+        <!-- <li data-menuanchor="Blog"></li> -->
         <li data-menuanchor="Contact"></li>
       </ul>
       <div class="yk-fullpage-slider-numbers"></div>
